--- a/issue-tracker-main/issue-tracker-main/package.json
+++ b/issue-tracker-main/issue-tracker-main/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@hookform/resolvers": "^3.3.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
@@ -18,6 +19,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "antd": "^5.16.2",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
@@ -37,6 +39,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^8.0.7",
     "react-simplemde-editor": "^5.2.0",
+    "react-sliding-pane": "^7.3.0",
     "recharts": "^2.8.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
