--- a/issue-tracker-main/issue-tracker-main/package.json
+++ b/issue-tracker-main/issue-tracker-main/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
     "@hookform/resolvers": "^3.3.1",
+    "@iconify/icons-mdi": "^1.2.48",
+    "@iconify/react": "^4.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -27,12 +29,15 @@
     "easymde": "^2.18.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "google-map-react": "^2.2.1",
+    "lodash": "^4.17.21",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
@@ -46,6 +51,8 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/google-map-react": "^2.1.10",
+    "@types/lodash": "^4.17.0"
   }
 }
