--- a/issue-tracker-main/issue-tracker-main/package.json
+++ b/issue-tracker-main/issue-tracker-main/package.json
@@ -36,6 +36,7 @@
     "postcss": "8.4.29",
     "prisma": "^5.3.1",
     "react": "18.2.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.6",
     "react-hook-form": "^7.46.1",
