--- a/issue-tracker-main/issue-tracker-main/package.json
+++ b/issue-tracker-main/issue-tracker-main/package.json
@@ -39,6 +39,7 @@
     "react-calendar": "^5.0.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.6",
+    "react-files": "^3.0.0",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
