--- a/issue-tracker-main/issue-tracker-main/package.json
+++ b/issue-tracker-main/issue-tracker-main/package.json
@@ -14,7 +14,7 @@
     "@iconify/icons-mdi": "^1.2.48",
     "@iconify/react": "^4.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^1.1.2",
     "@tanstack/react-query": "^4.35.3",
@@ -29,12 +29,15 @@
     "easymde": "^2.18.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "formidable": "^3.5.1",
+    "fs": "^0.0.1-security",
     "google-map-react": "^2.2.1",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
-    "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-calendar": "^5.0.0",
     "react-dom": "18.2.0",
@@ -54,7 +57,9 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/formidable": "^3.4.5",
     "@types/google-map-react": "^2.1.10",
-    "@types/lodash": "^4.17.0"
+    "@types/lodash": "^4.17.0",
+    "prisma": "^5.19.1"
   }
 }
