--- a/issue-tracker-main/issue-tracker-main/package.json
+++ b/issue-tracker-main/issue-tracker-main/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "issue-tracker",
+  "name": "nexsite",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,57 +9,63 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.3.6",
-    "@hookform/resolvers": "^3.3.1",
+    "@ant-design/icons": "^5.5.1",
+    "@ant-design/nextjs-registry": "^1.0.1",
+    "@hookform/resolvers": "^3.9.0",
     "@iconify/icons-mdi": "^1.2.48",
-    "@iconify/react": "^4.1.1",
+    "@iconify/react": "^5.0.2",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.19.1",
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/themes": "^1.1.2",
-    "@tanstack/react-query": "^4.35.3",
-    "@types/node": "20.6.2",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "antd": "^5.16.2",
-    "autoprefixer": "10.4.15",
-    "axios": "^1.5.0",
-    "classnames": "^2.3.2",
+    "@radix-ui/themes": "^3.1.4",
+    "@tanstack/react-query": "^5.59.15",
+    "antd": "^5.21.4",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
+    "classnames": "^2.5.1",
     "delay": "^6.0.0",
     "easymde": "^2.18.0",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
-    "formidable": "^3.5.1",
+    "formidable": "^3.5.2",
     "fs": "^0.0.1-security",
     "google-map-react": "^2.2.1",
+    "immutability-helper": "^3.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
-    "next": "13.4.19",
-    "next-auth": "^4.23.1",
-    "postcss": "8.4.29",
-    "react": "18.2.0",
+    "next": "^14.2.15",
+    "next-auth": "^4.24.8",
+    "react": "^18.3.1",
     "react-calendar": "^5.0.0",
-    "react-dom": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
-    "react-files": "^3.0.0",
-    "react-hook-form": "^7.46.1",
+    "react-files": "^3.0.3",
+    "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.11.0",
-    "react-loading-skeleton": "^3.3.1",
-    "react-markdown": "^8.0.7",
+    "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-markdown": "^9.0.1",
+    "react-resizable": "^3.0.5",
     "react-simplemde-editor": "^5.2.0",
     "react-sliding-pane": "^7.3.0",
-    "recharts": "^2.8.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
-    "zod": "^3.22.2"
+    "recharts": "^2.13.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/formidable": "^3.4.5",
     "@types/google-map-react": "^2.1.10",
-    "@types/lodash": "^4.17.0",
-    "prisma": "^5.19.1"
+    "@types/lodash": "^4.17.12",
+    "@types/node": "^20.16.13",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "babel-plugin-import": "^1.13.8",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.15",
+    "postcss": "^8.4.47",
+    "prisma": "^5.21.1",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   }
 }
